# cursor-chat-exporter

./: .gitignore  README.md  pyproject.toml
cursor_chat_exporter/: cursor_chat_util.py  export_chats.py
